[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_hud")

[node name="TopLeft" type="MarginContainer" parent="."]
anchors_preset = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 230.0
offset_bottom = 100.0

[node name="VBox" type="VBoxContainer" parent="TopLeft"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HealthBar" type="ProgressBar" parent="TopLeft/VBox"]
custom_minimum_size = Vector2(200, 22)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HungerBar" type="ProgressBar" parent="TopLeft/VBox"]
custom_minimum_size = Vector2(200, 22)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="ThirstBar" type="ProgressBar" parent="TopLeft/VBox"]
custom_minimum_size = Vector2(200, 22)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="TopRight" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="ZoneLabel" type="Label" parent="TopRight"]
layout_mode = 2
text = "Vùng An Toàn"
horizontal_alignment = 2

[node name="Bottom" type="Control" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -85.0
offset_right = 200.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0

[node name="Hotbar" type="HBoxContainer" parent="Bottom"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -35.0
offset_right = 195.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="RightButtons" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 1.0
anchor_right = 1.0
offset_left = -75.0
offset_top = 80.0
offset_right = -15.0
offset_bottom = 280.0
grow_horizontal = 0
theme_override_constants/separation = 10

[node name="InventoryBtn" type="Button" parent="RightButtons"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
text = "B
TÚI ĐỒ"

[node name="CraftingBtn" type="Button" parent="RightButtons"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
text = "C
CHẾ TẠO"

[node name="BuildBtn" type="Button" parent="RightButtons"]
custom_minimum_size = Vector2(60, 55)
layout_mode = 2
text = "TAB
XÂY"

[node name="BottomLeft" type="Control" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = -20.0
grow_vertical = 0

[node name="JoystickOuter" type="Panel" parent="BottomLeft"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="JoystickInner" type="Panel" parent="BottomLeft/JoystickOuter"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 90.0
offset_bottom = 90.0

[node name="BottomRight" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -95.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 12

[node name="InteractBtn" type="Button" parent="BottomRight"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "E
TƯƠNG TÁC"

[node name="AttackBtn" type="Button" parent="BottomRight"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "SPACE
TẤN CÔNG"
